@@ -1,3 +1,10 @@
+2006-10-19  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-scan.c: (loopdir):
+	
+	BUGZILLA: #351987 - Baobab hangs on directories with wrong
+	premissions 
+
 2006-10-14  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baobab.[ch]:
